--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web Dev</title>
-	<link rel="stylesheet" href="node.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1 style="text-align: center;font-family: calibri;">Jonathan Shaheer</h1>
