--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 style="text-align: center;font-family: calibri;">Jonathan Shaheer</h1>
-<hr>
+<h1 style="text-align: center;font-family: calibri;">Muhammad Shaheer</h1>
+<hr size="3" noshade>
+<div style="margin-left: 150px ;display: inline-flex;">
+		
+<div>
+	<a href="/">Home</a>
+</div>
+<div>
+	<a href="">About</a>
+</div>
+<div>
+	<a href="">Resume</a>
+</div>
+<div>
+	<a href="">Works</a>
+</div>
+<div>
+	<a href="">Testimonials</a>
+</div>
+<div>
+	<a href="">Contact</a>
+</div>
+
+
+	</div>	
 	<div class="social">
-		<img src="facebook.png" alt="">
+		<a href=""><img src="facebook.png" alt=""></a>
 		<img src="instagram.png" alt="">
 		<img src="whatsapp.png" alt="">
 		<img src="twitter.png" alt="">
@@ -20,7 +43,9 @@
 
 <br>
 <p style="margin-left: 30%;margin-right: 30%;">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
+I'm Lahore based graphic designer , illustrator and webdesigner creating awesome and
+effective visual identites for companies of all sizes around the globe.
+Let's start scrolling and learn more about me.
 </p>
 
 <br><br><br><br>
