--- a/index.html
+++ b/index.html
@@ -10,29 +10,7 @@
 <body>
 <h1 style="text-align: center;font-family: calibri;">Muhammad Shaheer</h1>
 <hr size="3" noshade>
-<div style="margin-left: 150px ;display: inline-flex;">
-		
-<div>
-	<a href="/">Home</a>
-</div>
-<div>
-	<a href="">About</a>
-</div>
-<div>
-	<a href="">Resume</a>
-</div>
-<div>
-	<a href="">Works</a>
-</div>
-<div>
-	<a href="">Testimonials</a>
-</div>
-<div>
-	<a href="">Contact</a>
-</div>
 
-
-	</div>	
 	<div class="social">
 		<a href=""><img src="facebook.png" alt=""></a>
 		<img src="instagram.png" alt="">
@@ -53,19 +31,19 @@ Let's start scrolling and learn more about me.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 <br><br><br><br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%; font-family:calibri">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 <br><br><br><br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%;font-family:calibri">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 <br><br><br><br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%;font-family:calibri">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 <br><br><br><br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%;font-family:calibri">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 
