--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
 		<img src="whatsapp.png" alt="">
 		<img src="twitter.png" alt="">
 	</div>
+<div style="margin-left: 150px ;display: inline-flex;">
+		
+<div>
+	<a href="/">Home</a>
+</div>
+<div>
+	<a href="">About</a>
+</div>
+<div>
+	<a href="">Resume</a>
+</div>
+<div>
+	<a href="">Works</a>
+</div>
+<div>
+	<a href="">Testimonials</a>
+</div>
+<div>
+	<a href="">Contact</a>
+</div>
 
+
+	</div>
 
 <br>
 <p style="margin-left: 30%;margin-right: 30%;">
