--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 <body>
 <h1 style="text-align: center;font-family: calibri;">Muhammad Shaheer</h1>
 <hr size="3" noshade>
-
-	<div class="social">
-		<a href=""><img src="facebook.png" alt=""></a>
-		<img src="instagram.png" alt="">
-		<img src="whatsapp.png" alt="">
-		<img src="twitter.png" alt="">
-	</div>
-<div style="margin-left: 150px ;display: inline-flex;">
+	<div style="margin-left: 150px ;display: inline-flex;">
 		
 <div>
 	<a href="/">Home</a>
@@ -41,15 +34,23 @@
 
 	</div>
 
+
+	<div class="social">
+		<a href=""><img src="facebook.png" alt=""></a>
+		<img src="instagram.png" alt="">
+		<img src="whatsapp.png" alt="">
+		<img src="twitter.png" alt="">
+	</div>
+
 <br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%;font-family: calibri;">
 I'm Lahore based graphic designer , illustrator and webdesigner creating awesome and
 effective visual identites for companies of all sizes around the globe.
 Let's start scrolling and learn more about me.
 </p>
 
 <br><br><br><br>
-<p style="margin-left: 30%;margin-right: 30%;">
+<p style="margin-left: 30%;margin-right: 30%;font-family: calibri;">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sint ipsum aliquam magnam soluta reiciendis labore corporis ex quis nesciunt assumenda cum, sunt, voluptate quibusdam. Omnis quibusdam molestias expedita similique!
 </p>
 <br><br><br><br>
